--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/reservation
+spring.datasource.url= jdbc:mysql://localhost:3306/reservation?zeroDateTimeBehavior=convertToNull
 spring.datasource.username= root
 spring.datasource.password= 450179
 spring.jpa.show-sql=true
